# mlops-zoomcamp-project-2024

./: README.md
.github/workflows/: integration-tests.yml
bike_duration_predictor/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  inference.dockerfile  modeltraining.dockerfile  pyproject.toml  webservice.dockerfile
bike_duration_predictor/integration_tests/: .gitignore  call_data_processing_lambda.py  call_model_training_lambda.py  docker-compose.yaml  output.csv  run.sh  run_data_processing.sh  run_model_training.sh  test_data_processing.sh
bike_duration_predictor/integration_tests/data/: train_model_input.csv
bike_duration_predictor/src/: cli.py  data_processing.py  lambda_handler.py  lib.py  train_model.py  utils.py
bike_duration_predictor/tests/: test_data_processing.py  test_lib.py  test_train_model.py  test_utils.py
bike_duration_predictor/tests/resources/: input.csv
iaac/: README.md  cdk.json  makefile  package-lock.json  package.json
iaac/lib/: dag.ts  iaac-stack.ts  mlflow.ts  webservice.ts
iaac/test/: call_endpoint.sh  stepfunction_input_example.json
sandbox/: README.md  explore_data.ipynb  pyproject.toml
sandbox/.ipynb_checkpoints/: README-checkpoint.md  explore_data-checkpoint.ipynb
