[tool.poetry]
name = "bike_duration_predictor"
version = "0.1.0"
description = ""
authors = ["Anatolii Burtsev <ab.canada.world@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
boto3 = "^1.34.140"
click = "^8.1.7"
requests = "^2.32.3"
deepdiff = "^7.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = [
    "src"
]
omit = [
    "src/cli.py",
    "src/lambda_handler.py",
    "tests/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0",
    "if __name__ == .__main__.:"
]